test/1.2/errors/T_endian_int_return.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// ERROR EEARG
method m() -> (uint24_be_t x) {
    x = 13;
}

method init() {
    local uint24_be_t i;
    // SIMICS-15714
    // Used to give weird error message, 'got uint24, expected uint24_be_t'
    // Now instead, endian int return values are not allowed at all
    // test kept for if we eventually re-enable this functionality
    /// ERROR EREF
    call $m() -> (i);
}
